modules/woofilters/css/frontend.woofilters.css
/* ... */
.ms-options ul {
	margin-left:0px;
}
.wpfFilterWrapper .ui-slider-horizontal {
	margin-top:20px !important;
}
.wpfFilterWrapper input[type=checkbox], .wpfFilterWrapper input[type=radio] {
	clear: none;
	cursor: pointer;
	display: inline-block;
	line-height: 0;
}
.wpfColorsFilter input {
	display:none !important;
}
.wpfFilterWrapper ul li::before {
	display:none !important;
}
.wpfFilterWrapper ul:not(.wpfButtonsFilter) li {
	width: auto !important;
}
.wpfFilterWrapper ul:not(.wpfButtonsFilter) li {
	padding-left: 0px !important;
	margin-left: 0px !important;
}
.rtl .wpfFilterWrapper ul:not(.wpfButtonsFilter) li {
	padding-right: 0px !important;
	padding-left: 10px !important;
	margin-right: 0px !important;
}
.wpfFilterWrapper label, .wpfFilterWrapper select, .wpfPriceFilterRange, .wpfFilterWrapper .ui-slider-handle {
	cursor:pointer !important;
}
.wpfFilterVerScroll {
	display: block;
	position: relative;
	width: 100%;
	margin: 0px;
	padding: 0px;
	padding-inline-start: 0;
	padding-left: 0px;
	padding-bottom: 1px;
}
.wpfFilterLayoutVer, .wpfFilterLayoutHor {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-ms-flex-align: start;
	align-items: start;
}
.wpfFilterLayoutVer>li, .wpfFilterLayoutHor>li {
	width: auto;
	margin-right: 0;
	margin-left: 0;
	padding-right: 10px;
}
.rtl .wpfFilterLayoutVer>li, .rtl .wpfFilterLayoutHor>li {
	padding-right: 0;
	padding-left: 10px;
}

.wpfFilterWrapper[data-filter-type="wpfPriceRange"] .wpfCheckbox input {
	position: relative;
}
.wpfFilterWrapper .irs-line {
	overflow: initial;
}
.wpfCheckboxHier li>ul {
	margin-left: 1em;
	padding-left: 0;
}
.wpfCheckboxHier li>ul.wpfHideParent li {
	width: 100%!important;
}
.wfpClickable {
	cursor: pointer;
}
.rtl .wpfFilterWrapper li {
	text-align: right !important;
}
.rtl .wpfTitleToggle {
	float: left !important;
}
.wpfBlockAnimated.wpfHide {
	max-height: 0;
	-webkit-transition: max-height 0.4s ease-out;
	-moz-transition: max-height 0.4s ease-out;
	transition: max-height 0.4s ease-out;
}
.wpfFilterContent {
	width: 100%;
	box-sizing: border-box;
}
.wpfBlockAnimated {
	overflow: hidden;
	max-height: 1000px;
	-webkit-transition: max-height 0.8s ease-in;
	-moz-transition: max-height 0.8s ease-in;
	transition: max-height 0.8s ease-in;
}
.wpfFilterWrapper[data-filter-type="wpfPrice"] .wpfFilterContent {
	overflow: visible;
	padding-left: 10px;
	padding-right: 10px;
}
.wpfFilterWrapper[data-filter-type="wpfPrice"] .wpfFilterContent.wpfHide {
	display: none;
}
.wpfOptionDisabled {
	color: #acacac;
}
.wpfPriceRangeField::-webkit-outer-spin-button,
.wpfPriceRangeField::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}
.wpfSearchHidden, .wpfSelectCopies {
	display: none !important;
}
.wpfFilterContent .ms-search {
	display: inline-block;
	margin: 0;
	min-height: 26px;
	padding: 4px;
	position: relative;
	white-space: nowrap;
	width: 100%;
}
.wpfFilterWrapper .wpfFilterContent .ms-options-wrap > .ms-options > .ms-search input {
	border: 1px groove;
	width: 100%;
	outline: none;
	border-radius: 0;
	height: auto;
}
@media only screen and (min-width : 1140px) {
	.wpfFilterWrapper .wpfPriceInputs {
		white-space: nowrap;
	}
}

.hidePageCategory {
	display: none !important;
}

ul ul.wpfHideAllParent {
	margin: 0;
}
.rtl .wpfSingleInputSearch button, .rtl .wpfSearchWrapper button {
	left: 0 !important;
	right: auto !important;
}
.rtl .wpfSingleInputSearch input, .rtl .wpfSearchWrapper input {
	padding-left: 25px !important;
}
.rtl .wpfMainWrapper .wpfCount {
	padding-left: 0;
	padding-right: 10px;
}
.rtl .wpfFilterWrapper i, .rtl .wpfFilterWrapper svg {
	float: left;
}
.wpfSrOnly {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border: 0;
}

/* Design updates */
/* ===================================================================================== */
.wpfFilterWrapper .wfpTitle {
	font-size: 16px;
	font-weight: bold;
	color: #64808e;
	text-transform: capitalize;
}
.wpfFilterVerScroll,
.wpfFilterContent span {
	font-size: 13px;
	font-weight: normal;
	color: #64808e;
}
/* Scrollbar width */
.wpfFilterVerScroll::-webkit-scrollbar {
	width: 1px;
}
.wpfFilterVerScroll {
	scrollbar-width: thin;
}
.wpfFilterButton.wpfButton,
.wpfClearButton.wpfButton {
	color: #64808e !important;
	background: #f0f0f0 !important;
	min-height: 40px !important;
	font-size: 16px !important;
	padding: 5px;
	align-items: center;
	border-radius: 4px;
	text-decoration: none !important;
	text-align: center;
	text-transform: uppercase;
	transition: all 0.2s;
	white-space: normal;
	cursor: pointer;
	border: none;
	font-weight: bold;
	outline: none;
	box-shadow: none;
}
#wpfSortProducts {
	padding: 9px 10px;
	background-color: transparent;
	color: #64808e !important;
	border: 1px solid #d8dfe3;
	min-height: 44px !important;
	font-size: 13px !important;
	outline: none;
	border-radius: 8px !important;
}
.wpfFilterVerScroll li {
	border-bottom: 0 !important;
}
.woobewoo-wrap {
	padding: 0;
	border: none;
	background-color: #f4f5f5;
}
.woobewoo_logo svg {
	max-width: 48px;
}

/**
 * Breadcrumb CSS
 */
.breadcrumb_heading {
	padding: 24px;
}
.breadcrumb_heading h2 {
	color: #000000;
	font-weight: 700;
	font-size: clamp(22px, 5vw, 32px);
	text-transform: capitalize;
	margin: 0 0 10px;
	line-height: 140%;
}
.woobewoo-breadcrumbs a {
	font-size: 14px;
	font-weight: 500;
	color: #636977 !important;
}
.woobewoo-breadcrumbs a:first-child {
	padding-left: 0;
}
.woobewoo-breadcrumbs {
	padding: 0;
}
.woobewoo-breadcrumbs .breadcrumbs-separator {
	background-image: url("../img/chevron_right.png");
	background-position: center;
	background-size: 15px;
}

/**
 * Add new filter CSS
 */
.woobewoo-plugin.ui-dialog {
	border-radius: 24px;
	border: 1px solid #dbdce1;
}
.woobewoo-plugin.ui-dialog .ui-dialog-titlebar {
	padding: 30px 24px !important;
	background: #ffffff !important;
}
/* ... */

